# prokopton

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  requirements.lock.txt  requirements.txt  test_memory.py
docs/: architecture.md
experiments/: m0_environment.py  m10_train_tokenizers.py  m1_associative_recall.py  m1b_inplace_ttt.py  m2_rocm_profile.py  m3_gemma4_graft.py  m3plus_intensive_ttt.py  m3plus_lite.py  m4_visual.py  m5_audio.py  m6_evaluation.py  m7_multimodal.py  m8_emotion_test.py  m8_live_multimodal_test.py  m8_multimodal_pipeline.py  m9_cross_session.py
models/: README.md
prokopton/: __init__.py  backends.py  config.py  repl.py  tui.py  vlm.py
prokopton/core/: __init__.py
prokopton/eval/: __init__.py
prokopton/models/: __init__.py
tests/: conftest.py  test_backends.py  test_config.py  test_core.py
