[project]
name = "prokopton"
version = "0.3.1"
description = "Continual-learning, non-forgetting, multimodal LLM — runs on ROCm, CUDA, MPS, MLX, CPU"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "torch>=2.0.0",
    "transformers>=5.0.0",
    "accelerate",
    "titans-pytorch>=0.5.0",
    "einops",
    "safetensors",
    "textual>=1.0.0",
    "huggingface-hub>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.10.0", "mlx-lm>=0.10.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
prokopton = "prokopton.tui:main"
prokopton-tui = "prokopton.tui:main"
prokopton-repl = "prokopton.repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prokopton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
